--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,16 @@
 body{
     text-align: center;
 }
+
+#myCanvas{
+    border:1px solid #000000;
+    margin-left: 220px;
+}
+
+#canvasDiv{
+    float: left;
+}
+
+.table {
+    display: initial;
+}
